structuring and adding results

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 langchain==0.0.284
+google-generativeai
 python-dotenv==1.0.0
-streamlit==1.22.0
+streamlit
 tiktoken==0.4.0
 faiss-cpu==1.7.4
 protobuf~=3.19.0
@@ -8,4 +9,4 @@ langchain_experimental
 mysql-connector-python
 pymysql
 sentence-transformers
-chromadb
+chromadb==0.4.15
